expected/main/lc/illegal-data-lhs1.err
ERROR: "actual/main/lc/illegal-data-lhs1.llc", line 3
  data a     = A | B
       ^
Missing data type name (unexpected identifier "a")

ERROR: "actual/main/lc/illegal-data-lhs1.llc", line 4
  data a b   = A | B
       ^
Missing data type name (unexpected identifier "a")

ERROR: Aborting after 2 previously reported errors

